cmake_minimum_required(VERSION 3.8)

project(Nippon VERSION 0.0.1 LANGUAGES C CXX)

set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(COMMON_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Common)
set(EDITOR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Editor)
set(PACKER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Packer)
set(BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Binary)
set(LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Library)
set(VENDOR_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Vendor)

if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
  set(STATIC_LIBRARY_EXT .lib)
  set(SHARED_LIBRARY_EXT .dll)
elseif(${CMAKE_SYSTEM_NAME} STREQUAL Linux)
  set(STATIC_LIBRARY_EXT .a)
  set(SHARED_LIBRARY_EXT .so)
endif()

add_subdirectory(Common)
add_subdirectory(Packer)
add_subdirectory(Editor)