cmake_minimum_required(VERSION 3.8)

set(TARGET_NAME Common)

file(GLOB_RECURSE TARGET_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  set_source_files_properties(${TARGET_SOURCE} PROPERTIES COMPILE_FLAGS -Wall)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  set_source_files_properties(${TARGET_SOURCE} PROPERTIES COMPILE_FLAGS -Wall)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
  set_source_files_properties(${TARGET_SOURCE} PROPERTIES COMPILE_FLAGS /W3)
endif()

add_library(${TARGET_NAME} STATIC
  ${TARGET_SOURCE}
)

set_target_properties(${TARGET_NAME} PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY ${BINARY_DIR}
  LIBRARY_OUTPUT_DIRECTORY ${BINARY_DIR}
  RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR}
  PREFIX ""
  C_STANDARD 11
  CXX_STANDARD 23
)

target_include_directories(${TARGET_NAME}
  PUBLIC ${ROOT_DIR}
)