cmake_minimum_required(VERSION 3.8)

include(Compiler)
include(Platform)

set(TARGET_NAME Common)

file(GLOB_RECURSE TARGET_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(${TARGET_NAME} STATIC
	${TARGET_SOURCE}
)

set_target_properties(${TARGET_NAME} PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${BINARY_DIR}
	LIBRARY_OUTPUT_DIRECTORY ${BINARY_DIR}
	RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR}
	PREFIX ""
	C_STANDARD 11
	CXX_STANDARD 23
)

target_compile_definitions(${TARGET_NAME}
	PUBLIC _CRT_SECURE_NO_WARNINGS
)

target_include_directories(${TARGET_NAME}
	PUBLIC ${ROOT_DIR}
)