cmake_minimum_required(VERSION 3.8)

set(TARGET_NAME Packer)

file(GLOB_RECURSE CRC_SOURCE ${VENDOR_DIR}/CRC/*.c ${VENDOR_DIR}/CRC/*.cpp)
file(GLOB_RECURSE TARGET_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_executable(${TARGET_NAME}
  ${CRC_SOURCE}
  ${TARGET_SOURCE}
)

set_target_properties(${TARGET_NAME} PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY ${BINARY_DIR}
  LIBRARY_OUTPUT_DIRECTORY ${BINARY_DIR}
  RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR}
  PREFIX ""
  C_STANDARD 11
  CXX_STANDARD 23
)

target_include_directories(${TARGET_NAME}
  PUBLIC ${ROOT_DIR}
)

target_link_libraries(${TARGET_NAME}
  PUBLIC ${BINARY_DIR}/Common${STATIC_LIBRARY_EXT}
)

target_compile_definitions(${TARGET_NAME}
  PUBLIC BINARY_DIR="${BINARY_DIR}"
)